--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,142 +1,15 @@
-@font-face {
-  font-family: IRANSansWebBold;
-  src: url(./font/IRANSansWeb_Bold.ttf);
-}
-@font-face {
-  font-family: IRANSansWeb;
-  src: url(./font/IRANSansWeb.ttf);
-}
-/* * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  direction: rtl;
-} */
-
-/* body */
-.body {
-  width: 100%;
-  height: 100vh;
-}
-/* container */
-.container {
-  width: 100%;
-  height: 100vh;
-  overflow-x: hidden;
-}
-/* header_top */
-.header_top {
-  width: 100%;
-  display: flex;
-  height: 50px;
-  background: #156419;
-  align-items: center;
-  padding: 0 50px;
-  justify-content: space-between;
-}
-/* Social_media */
-.Social_media {
-  display: flex;
-  width: 30%;
-}
-.Social_media > img {
-  margin-left: 10px;
-  width: 25px;
-  height: 25px;
-}
-/* information */
-.information {
-  display: flex;
-  width: 70%;
-  font-family: "IRANSansWeb";
-  justify-content: flex-end;
-  color: #fff;
-  font-size: 12px;
-  align-items: center;
-}
-.information > div {
-  display: flex;
-  align-items: center;
-}
-.information > div > img {
-  margin-left: 6px;
-}
-.gps,
-.phone {
-  margin-left: 30px;
-}
-/* header_bottom */
-.header_bottom {
-  width: 100%;
-  display: flex;
-  height: 80px;
-  align-items: center;
-  padding: 0 50px;
-  justify-content: space-between;
-}
-/* navbar */
-.navbar {
-  display: flex;
-}
-.navbar > ul {
-  display: flex;
-}
-
-.navbar > ul > li {
-  display: flex;
-}
-.navbar > ul > li > a {
-  display: flex;
-  text-decoration: none;
-  margin-left: 50px;
-  color: #141414;
-  font-family: "IRANSansWeb";
-  font-size: 15px;
-  cursor: pointer;
-}
-
-.navbar > ul > li > a:hover {
-  font-family: "IRANSansWebBold";
-  color: #156419;
-  transition: all 400ms ease;
-  transition-duration: 0.4s;
-}
-/* phone_consultancy */
-.phone_consultancy {
-  display: flex;
-  font-family: "IRANSansWeb";
-  color: #141414;
-  font-size: 13px;
-  align-items: center;
-}
-/* circle */
-.circle {
-  width: 39px;
-  height: 39px;
-  border-radius: 39px;
-  background: linear-gradient(75deg, #156419 -5.33%, #17ce20 161.37%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.circle > img {
-  width: 18px;
-  height: 18px;
-}
-.phone_consultancy > h4 {
-  margin-right: 10px;
-}
-.topSwiper {
+.top_swipper {
   margin-bottom: 150px;
+  position: relative;
+  /* display: flex; */
+  /* align-items: center; */
 }
-.swiper {
+.top_swipper_slide {
   width: 100%;
-}
-.swiper-slide {
-  width: 100%;
+  height: 450px;
   position: relative;
 }
-.swiper-slide > h1 {
+.swiper_slide > h1 {
   z-index: 99;
   position: absolute;
   top: 160px;
@@ -145,7 +18,7 @@
   font-family: "IRANSansWebBold";
   color: #141414;
 }
-.swiper-slide > span {
+.swiper_slide > span {
   z-index: 99;
   position: absolute;
   top: 205px;
@@ -154,53 +27,61 @@
   font-family: "IRANSansWeb";
 }
 
-.swiper-button-next,
-.swiper-button-prev {
+.swiper_button_next,
+.swiper_button_prev {
   background: #fff;
   width: 30px !important;
   height: 30px !important;
   box-shadow: (0px 0px 4px rgba(116, 116, 116, 0.25));
   border-radius: 100px;
   cursor: pointer;
+  position: absolute;
+  top: calc(50% - 15px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background 0.1s;
+  z-index: 99999;
 }
-
-.swiper-button-prev:hover {
+.swiper_button_next {
+  left: 50px;
+}
+.swiper_button_prev {
+  right: 50px;
+}
+.swiper_button_prev:hover {
   background: #156419 !important;
 }
-.swiper-button-next:hover {
+.swiper_button_next:hover {
   background: #156419 !important;
 }
-.swiper-button-prev:after {
-  content: unset !important;
-}
-.swiper-button-next:after {
-  content: unset !important;
-}
-.swiper-button-next > svg,
-.swiper-button-prev > svg {
+.swiper_button_next > svg,
+.swiper_button_prev > svg {
   width: 6px !important;
 }
-.swiper-button-prev:hover path {
+.swiper_button_prev:hover path {
   stroke: #fff !important;
 }
-.swiper-button-next:hover path {
+.swiper_button_next:hover path {
   stroke: #fff !important;
 }
-.swiper-button-prev.swiper-button-disabled {
+.swiper_button_prev.swiper-button-disabled {
   opacity: 1 !important;
 }
 
 /* section_one */
 .section_one {
   width: 100%;
+  max-width: 100%;
   display: flex;
   padding: 0 50px 0 0;
   justify-content: space-between;
   margin-bottom: 100px;
+  overflow-x: hidden !important;
 }
 /* section_one_right */
 .section_one_right {
-  width: 69%;
+  width: 59%;
   display: flex;
   flex-direction: column;
 }
@@ -308,22 +189,19 @@
   position: absolute;
   width: 100%;
   bottom: 40px;
-  left: 40px;
+  right: -60px;
 }
 /* section_two */
 .section_two {
-  display: flex;
   width: 100%;
-  height: 550px;
   background: rgba(21, 100, 25, 0.03);
   margin-bottom: 100px;
-  flex-direction: column;
+  padding: 40px 50px;
 }
 /* section_two_title */
 .section_two_title {
-  margin-top: 40px;
   width: 100%;
-  padding: 0 50px;
+  margin-bottom: 40px;
 }
 .section_two_title > h1 {
   font-size: 22px;
@@ -341,32 +219,32 @@
     rgba(21, 100, 25, 0) 100%
   );
   border-radius: 150px;
-  margin-bottom: 20px;
 }
-.mySwiper .swiper-wrapper {
-  padding: 0 50px 50px 50px;
-  margin-bottom: 40px;
+.section_two > div:nth-child(2) {
+  padding-bottom: 40px;
 }
-.mySwiper .swiper-wrapper .swiper-slide {
+.categories_swiper_slide_with_btn {
   display: flex;
   flex-direction: column;
   border-radius: 20px;
   background: #fff;
   max-width: 22% !important;
-  cursor: pointer;
-  height: 380px;
+  height: 400px;
   padding-bottom: 16px;
+  transition: all ease 0.3s;
 }
-.swiper-slide-with-btn > .swiper-slide-btn {
+.categories_swiper_slide_with_btn > .swiper_slide_btn {
   margin-top: auto;
 }
 
-.mySwiper .swiper-wrapper .swiper-slide:hover {
+.categories_swiper_slide_with_btn:hover {
   box-shadow: 0px 24px 30px 0px rgba(101, 79, 59, 0.12);
   transition: border 0.1s;
 }
-.swiper-slide > div > img {
+.categories_swiper_slide_with_btn > div > img {
   width: 100%;
+  max-height: 210px;
+  object-fit: cover;
   border-radius: 20px 20px 0px 0px;
   object-fit: cover;
 }
@@ -389,11 +267,11 @@
 }
 
 /* swiper-slide-btn*/
-.swiper-slide-btn {
+.swiper_slide_btn {
   width: 100%;
   padding: 0 20px;
 }
-.swiper-slide-btn > button {
+.swiper_slide_btn > button {
   width: 120px;
   height: 35px;
   display: flex;
@@ -409,7 +287,7 @@
     rgba(21, 100, 25, 1) 100%
   );
 }
-.swiper-slide-btn > button > div {
+.swiper_slide_btn > button > div {
   width: 100%;
   height: 100%;
   font-family: "IRANSansWebBold";
@@ -422,10 +300,10 @@
   cursor: pointer;
   transition: background 0.1s;
 }
-.swiper-slide-btn > button > div > span {
+.swiper_slide_btn > button > div > span {
   font-size: 13px;
 }
-.swiper-slide-btn > button > div:hover {
+.swiper_slide_btn > button > div:hover {
   color: white;
   background: rgb(21, 100, 25);
   background: linear-gradient(
@@ -434,10 +312,10 @@
     rgba(21, 100, 25, 1) 100%
   );
 }
-.swiper-slide-btn > button > div:hover path {
+.swiper_slide_btn > button > div:hover path {
   fill: white !important;
 }
-.swiper-slide-btn > button > div > span {
+.swiper_slide_btn > button > div > span {
   margin-left: 8px;
 }
 /* section_three */
@@ -726,8 +604,8 @@
   display: flex;
   width: 100%;
   padding: 0 50px;
-  background: rgba(21, 100, 25, 0.03);
-  margin-bottom: 100px;
+  /* background: rgba(21, 100, 25, 0.03); */
+  margin-bottom: 20px;
   flex-direction: column;
   height: 360px;
 }
@@ -754,17 +632,17 @@
   border-radius: 150px;
   margin-bottom: 20px;
 }
-.swiper-slide-comments {
+.swiper_slide_comments {
   display: flex;
   flex-direction: column;
   border-radius: 20px;
   background: #fff;
   max-width: 25% !important;
-  cursor: pointer;
   height: 165px !important;
   padding-bottom: 16px;
+  border: 1px solid rgba(230, 230, 230, 0.6);
 }
-.swiper-slide-comments-top {
+.swiper_slide_comments_top {
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -793,123 +671,14 @@
 .star {
   margin-top: 5px;
 }
-.swiper-slide-comments-bottom {
+.swiper_slide_comments_bottom {
   display: flex;
   width: 100%;
   padding: 0 20px;
 }
-.swiper-slide-comments-bottom > span {
+.swiper_slide_comments_bottom > span {
   text-align: justify;
   font-family: "IRANSansWeb";
-  font-size: 12px;
-  color: #555;
-}
-footer {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  background: rgba(21, 100, 25, 0.03);
-  height: 370px;
-  padding: 0 50px;
-}
-.footer_top {
-  margin-top: 24px;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 16px;
-  align-items: center;
-}
-.line_footer {
-  width: 100%;
-  border: 1px solid #1a601a11;
-}
-/* footer_center */
-.footer_center {
-  width: 100%;
-  display: flex;
-  margin-top: 30px;
-  margin-bottom: 20px;
-}
-.input_email {
-  width: 24%;
-  display: flex;
-  position: relative;
-  margin-left: 50px;
-}
-.input_email > input {
-  width: 100%;
-  border-radius: 10px;
-  border: 1px solid #f1f1f1;
-  background: #fff;
-  box-shadow: 0px 1px 5px 0px rgba(68, 46, 26, 0.12);
-  height: 44px;
-  padding-right: 70px;
-}
-.input_email > button {
-  position: absolute;
-  height: 44px;
-  width: 18%;
-  border-radius: 0 10px 10px 0;
-  background: #156419;
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.link {
-  display: flex;
-  flex-direction: column;
-  width: 24%;
-  margin-left: 20px;
-}
-.link > a {
-  margin-bottom: 8px;
-  text-decoration: none;
-  color: #555;
-  font-size: 12px;
-  font-family: "IRANSansWeb";
-}
-.link > span {
-  margin-bottom: 12px !important;
-}
-.link > span > a {
-  color: #156419;
-  text-decoration: none;
-  font-size: 15px !important;
-  font-family: "IRANSansWebBold";
-}
-.footer_information {
-  display: flex;
-  width: 24%;
-  flex-direction: column;
-}
-.footer_information > div {
-  display: flex;
-  width: 100%;
-  align-items: center;
-  margin-bottom: 18px;
-}
-.footer_information > div > span {
-  font-family: "IRANSansWebBold";
-  font-size: 12px;
-  color: #141414;
-}
-.footer_information > div > svg {
-  margin-left: 8px;
-  color: #141414;
-}
-.line_last {
-  width: 100%;
-  border: 1px solid #1a601a11;
-}
-.footer_bottom {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 20px;
-}
-.footer_bottom > span {
-  font-family: "IRANSansWebBold";
   font-size: 12px;
   color: #555;
 }
