--- a/layout/layout.module.css
+++ b/layout/layout.module.css
@@ -2,11 +2,11 @@
   width: 100vw;
   min-height: 100vh;
   overflow-y: auto;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   display: flex;
   flex-direction: column;
   padding-top: 130px;
 }
 .page_body {
-  border: 1px solid red;
+  overflow-x: hidden !important;
 }
