--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,3 +13,15 @@
   padding: 0;
   font-family: IRANSansWeb;
 }
+
+html {
+  overflow-x: hidden !important;
+}
+.ant-message,
+.ant-popover {
+  z-index: 99999999999999 !important;
+}
+.ant-message > div > div > div {
+  display: flex;
+  align-items: center;
+}
