--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -77,7 +77,7 @@
   justify-content: center;
   align-items: center;
   transition: background 0.1s;
-  z-index: 99999;
+  z-index: 999;
 }
 .swiper_button_next {
   left: 50px;
@@ -600,7 +600,12 @@
     rgba(21, 100, 25, 1) 100%
   );
 }
-.blog_btn > button > div {
+.blog_btn > button > a {
+  width: 100% !important;
+  height: 100% !important;
+  text-decoration: none !important;
+}
+.blog_btn > button > a > div {
   width: 100%;
   height: 100%;
   font-family: "IRANSansWebBold";
@@ -613,10 +618,10 @@
   cursor: pointer;
   transition: background 0.1s;
 }
-.blog_btn > button > div > span {
+.blog_btn > button > a > div > span {
   font-size: 13px;
 }
-.blog_btn > button > div:hover {
+.blog_btn > button > a > div:hover {
   color: white;
   background: rgb(21, 100, 25);
   background: linear-gradient(
@@ -625,10 +630,10 @@
     rgba(21, 100, 25, 1) 100%
   );
 }
-.blog_btn > button > div:hover path {
+.blog_btn > button > a > div:hover path {
   fill: white !important;
 }
-.blog_btn > button > div > span {
+.blog_btn > button > a > div > span {
   margin-left: 8px;
 }
 .box:hover {
