--- a/styles/blog.module.css
+++ b/styles/blog.module.css
@@ -101,7 +101,12 @@
     rgba(21, 100, 25, 1) 100%
   );
 }
-.blog_btn > button > div {
+.blog_btn > button > a {
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+}
+.blog_btn > button > a > div {
   width: 100%;
   height: 100%;
   font-family: "IRANSansWebBold";
@@ -114,10 +119,10 @@
   cursor: pointer;
   transition: background 0.1s;
 }
-.blog_btn > button > div > span {
+.blog_btn > button > a > div > span {
   font-size: 13px;
 }
-.blog_btn > button > div:hover {
+.blog_btn > button > a > div:hover {
   color: white;
   background: rgb(21, 100, 25);
   background: linear-gradient(
@@ -126,9 +131,9 @@
     rgba(21, 100, 25, 1) 100%
   );
 }
-.blog_btn > button > div:hover path {
+.blog_btn > button > a > div:hover path {
   fill: white !important;
 }
-.blog_btn > button > div > span {
+.blog_btn > button > a > div > span {
   margin-left: 8px;
 }
