--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -122,3 +122,29 @@
   font-size: 12px;
   color: #555;
 }
+
+@media only screen and (max-width: 1000px) {
+  .footer_center {
+    flex-direction: column;
+  }
+  .footer_center > div {
+    width: 100%;
+    margin-bottom: 24px;
+  }
+  .footer_center > div:last-child {
+    margin-bottom: 0 !important;
+  }
+  .input_email {
+    width: 300px !important;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .footer {
+    padding: 0 12px;
+  }
+}
+@media only screen and (max-width: 360px) {
+  .footer_information > div > span {
+    font-size: 11px;
+  }
+}
